--- a/SkateShop.Api/Properties/launchSettings.json
+++ b/SkateShop.Api/Properties/launchSettings.json
@@ -16,8 +16,7 @@
       "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
-        "CONNECTION_STRING": "Host=ep-mute-bird-a4mehzee-pooler.us-east-1.aws.neon.tech;Port=5432;Database=verceldb;Username=default;Password=L03JitbqHAPT;",
-        "ORIGINS": "http://localhost:5173"
+        "CONNECTION_STRING": "Host=ep-mute-bird-a4mehzee-pooler.us-east-1.aws.neon.tech;Port=5432;Database=verceldb;Username=default;Password=L03JitbqHAPT;"
       },
       "dotnetRunMessages": true,
       "applicationUrl": "https://localhost:7159;http://localhost:5164"
